<resources>
    <string name="app_name">NumARt</string>
    <string name="create_an_account">Start Your Adventure!</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">"Date of Birth"</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="welcomeback">Welcome Back, \nLittle Genius!</string>
    <string name="login_to_your_account">Log in to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">New here? Let\'s get started!</string>
    <string name="signup">Sign up</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login_successful">Welcome back! You have successfully logged in.</string>
    <string name="login_failed">Log-in failed. Please check your credentials and try again</string>
    <string name="please_select_date_of_birth">Please select your date of birth!</string>
    <string name="please_enter_your_fullname">Please enter your full name</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="email_already_exists">Email already exists. Please use a different email.</string>
    <string name="something_went_wrong">Sign-up failed. Please try again.</string>
    <string name="signup_successful">Congratulations! You have successfully signed up.</string>
    <string name="forgot_password_verification">Verification</string>
    <string name="forgot_password_description">Enter your email, and we’ll send you a magic link to reset your password!</string>
    <string name="send">Send</string>
    <string name="password_reset_email_sent">An email to reset your password has been sent. Please check your inbox.</string>
    <string name="failed_to_send_reset_email">Failed to send password reset email. Please ensure your email address is correct and try again.</string>
    <string name="forgot_password_title">Oops! Forgot something?</string>
    <string name="settings">Settings</string>
    <string name="easy_level">Easy Level</string>
    <string name="medium_level">Medium Level</string>
    <string name="hard_level">Hard Level</string>
    <string name="pick_levels">Pick your level and let the fun begin!</string>
    <string name="hello_fullname">Hello ... 👋</string>
    <string name="main_activity_description">Welcome to the magical world of NumARt! 🪄 \nLet\'s play with numbers 🧮 and learn amazing things together! 📚</string>
    <string name="settingsActivity_App_language">App language</string>
    <string name="settingsActivity_Suggestions">Give us your suggestions</string>
    <string name="settingsActivity_Developed_by">Developed by</string>
    <string name="settingsActivity_Achraf_EL_MASOUDI">Achraf EL MASOUDI</string>
    <string name="settingsActivity_logout">Log out</string>
    <string name="error_occurred">Failed to load target data.</string>
    <string name="log_out">LOG OUT</string>
    <string name="log_out_message">Are you sure you want to log out ?</string>
    <string name="log_out_success">You have successfully logged out.</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Hello</string>
    <string name="our_target">Our target :</string>
    <string name="number_already_used">You have already used this number!</string>
    <string name="invalid_operation">Invalid operation!</string>
    <string name="select_operation">Please choose an operation!</string>
    <string name="target_not_reached">Target not reached! Click the refresh button to try again.</string>
    <string name="next_target_already_unlocked">Next target already unlocked!</string>
    <string name="target_reached">Congratulations! You have reached your target! 🎉</string>
    <string name="next_target_unlocked">Next target unlocked!</string>
    <string name="next_target_unlock_failed">Failed to unlock next target</string>
    <string name="target_exceeded">The result exceeded the target!</string>
    <string name="operation_already_selected">An operation has already been selected!</string>
    <string name="select_number_first">Please choose a number first!</string>
    <string name="start_by_choosing_number">Start by choosing a number</string>
    <string name="settingsActivity_Age">"Age : "</string>
    <string name="settingsActivity_targetsUnlocked">"Unlocked Targets : "</string>
    <string name="to_next_target">To our next target</string>
    <string name="restart_game">Restart the game</string>
    <string name="bottomSheetLayoutOfLanguages_Application_language">Application language</string>
    <string name="bottomSheetLayoutOfLanguages_English">English</string>
    <string name="bottomSheetLayoutOfLanguages_Turkish">Turkish</string>
</resources>