<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainActivity_toolbar_relativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainActivity_toolBarId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryColor"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:popupTheme="@style/Theme.MaterialComponents.Light"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/styleOfToolbar"
            app:titleTextColor="@color/white" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainActivity_toolbar_relativeLayoutId">

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mainActivity_fullnameId"
                    android:text="@string/hello_fullname"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:textSize="23sp"
                    android:fontFamily="@font/righteous"
                    android:layout_height="match_parent"/>
                <TextView
                    android:text="@string/main_activity_description"
                    android:textColor="@color/black"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/righteous"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/pick_levels"
                    android:textColor="@color/gray"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/righteous"
                    android:textSize="12sp"
                    android:layout_height="match_parent"/>

                <RelativeLayout
                    android:id="@+id/mainActivity_easyLevel_relativelayoutId"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="125dp">

                    <RelativeLayout
                        android:id="@+id/mainActivity_easyLevelId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/background_levels"
                        android:backgroundTint="#FFE0B2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/teko_semibold"
                            android:text="@string/easy_level"
                            android:textColor="@color/black"
                            android:textSize="40sp" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/easy_level" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mainActivity_mediumLevel_relativelayoutId"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_below="@id/mainActivity_easyLevel_relativelayoutId"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp">

                    <RelativeLayout
                        android:id="@+id/mainActivity_mediumLevelId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/background_levels"
                        android:backgroundTint="#FFAB91">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/teko_semibold"
                            android:text="@string/medium_level"
                            android:textColor="@color/black"
                            android:textSize="40sp" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/medium_level" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mainActivity_hardLevel_relativelayoutId"
                    android:layout_below="@id/mainActivity_mediumLevel_relativelayoutId"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="125dp">

                    <RelativeLayout
                        android:id="@+id/mainActivity_hardLevelId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/background_levels"
                        android:backgroundTint="#FF7043">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/teko_semibold"
                            android:text="@string/hard_level"
                            android:textColor="@color/black"
                            android:textSize="40sp" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="90dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/hard_level" />

                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>