<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/forgotPasswordActivity_toolbar_relativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/forgotPasswordActivity_toolBarId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryColor"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:popupTheme="@style/Theme.MaterialComponents.Light"
            app:title="@string/forgot_password_verification"
            app:titleTextAppearance="@style/styleOfToolbar"
            app:titleTextColor="@color/white" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/forgotPasswordActivity_toolbar_relativeLayoutId">

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/forgotPasswordActivity_descriptionId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:fontFamily="@font/righteous"
                        android:gravity="center"
                        android:text="@string/forgot_password_title"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/autoradiographic"
                        android:gravity="center"
                        android:text="@string/forgot_password_description"
                        android:textColor="@color/gray"
                        android:textSize="22sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/forgotPasswordActivity_emailId"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="15dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/text_input_layout_stroke_color_selector"
                    app:endIconCheckable="true"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/forgotPasswordActivity_sendButtonId"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="50dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/primaryColor"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/forgotPasswordActivity_sendButtonId_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/autoradiographic"
                            android:gravity="center"
                            android:text="@string/send"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="19dp"
                            android:visibility="visible" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/forgotPasswordActivity_sendButtonId_loadingLottie"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_colorFilter="@color/white"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/loading_animation"
                            app:lottie_speed="1.5" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>